// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Active section change 1`] = `
<div>
  <section
    id="tr__bottom-panel"
  >
    <div>
      test
    </div>
    <div>
      Should always be there
    </div>
  </section>
</div>
`;

exports[`Active section change 2`] = `
<div>
  <section
    id="tr__bottom-panel"
  >
    <div>
      Should always be there
    </div>
  </section>
</div>
`;

exports[`One active section with contribution 1`] = `
<div>
  <section
    id="tr__bottom-panel"
  >
    <div>
      test
    </div>
    <div>
      Should always be there
    </div>
  </section>
</div>
`;

exports[`One active section with contribution and props 1`] = `
<div>
  <section
    id="tr__bottom-panel"
  >
    <div>
      Should always be there
    </div>
    <div
      activesection="foo"
    >
      Foo section, with props
    </div>
  </section>
</div>
`;

exports[`active section without contribution 1`] = `
<div>
  <section
    id="tr__bottom-panel"
  >
    <div>
      Should always be there
    </div>
  </section>
</div>
`;
